fixes header left and right alignment

--- a/app/stylesheets/_header.css.sass
+++ b/app/stylesheets/_header.css.sass
@@ -5,8 +5,10 @@ div#header, header
   border-bottom: 4px solid #fff
   margin: 0
   #nav_wrapper
-    width: 976px
+    width: 1004px
     margin: 0 auto
+    position: relative
+    left: 4px
     #logo
       margin-top: 10px
       text-decoration: none
